--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -10,10 +10,11 @@
         <attr name="inner_container_background_color" format="color" />
         <attr name="inner_container_circle_color" format="color" />
         <attr name="inner_container_circle_border_color" format="color" />
-        <attr name="inner_container_circle_border_width" format="dimension" />
+        <attr name="inner_container_circle_border_width" format="integer" />
         <attr name="inner_text" format="string" />
         <attr name="inner_text_size" format="dimension" />
         <attr name="inner_text_color" format="color" />
         <attr name="corner_radius" format="float" />
+        <attr name="center_icon" format="integer" />
     </declare-styleable>
 </resources>
